--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:state_focused="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#F2F2F2" />
+            <stroke android:width="2dp" android:color="#101010" /> <!-- Warna border saat fokus -->
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
+
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#F2F2F2" />
+            <stroke android:width="1dp" android:color="#CCCCCC" /> <!-- Warna border normal -->
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
+
 </selector>
