--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+<!--    <color name="background">#F2F2F2</color>-->
+<!--    <color name="brownish">#B6B09F</color>-->
+<!--    <color name="login_button_bg">#3A7065</color>-->
+<!--    <color name="login_button_text">#FFFFFFFF</color>-->
+
 </resources>
